# rh_rocket

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  RemoteHut Directus.postman_collection.json  Rocket.toml  app-spec.yaml  docker-compose.yml  octopus-app.yaml
Ziro - Freelancer Website Landing HTML Template/Documentation/: changelog.html  credits.html
Ziro - Freelancer Website Landing HTML Template/Figma/: Ziro_FreelancerWebsiteLanding_AllPage.fig
Ziro - Freelancer Website Landing HTML Template/Ziro_html_template/: applicationform.html  eventlist.html  index.html  jobdetail.html
api/: Cargo.toml
api/src/: cjobs.rs  cposts.rs  lib.rs  posts.rs
api/templates/: index.html.tera  layout.html.tera
core/: Cargo.toml
entity/: Cargo.toml
entity/src/: job.rs  lib.rs  post.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221126_104549_create_jobs_table.rs
src/: lib.rs  main.rs
src/commands/: command_create_job.rs  command_prep_hire_page.rs  mod.rs
src/directus_res/: jobs_view_result.rs  mod.rs
src/errors/: our_error.rs
src/models/: countries.rs  job.rs  jobs_countries.rs  jobs_regions.rs  jobs_tags.rs  jos_tags.rs  metrics_clockify.rs  mod.rs  query_resp.rs  region.rs  tag.rs
src/routes/: home.rs  jobs.rs  metrics.rs  mod.rs
src/services/: countries_svc.rs  job_svc.rs  job_tags_svc.rs  mod.rs  region_svc.rs  tags_svc.rs
src/states/: mod.rs
src/uilts/: mod.rs
src/views/: index.html.tera  layout.html.tera
static/css/: remote-hut.css  styles.css  styles.css.map
ziro/Ziro_html_template/: freelancerlist.html  joblist.html
(+42 files in other folders)
