[package]
edition = "2021"
name = "remote_hut"
version = "0.1.0"

[[bin]]
name = "remote_hut"
path = "src/main.rs"

[lib]
name = "remote_hut"
path = "src/lib.rs"

[dependencies]
argon2 = {version = "0.3", features = ["std"]}
async-log = "2.0.0"
base64 = {version = "0.13.0"}
chrono = "0.4.23"
fern = "0.6"
log = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"] }
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}
serde = "1.0.130"
time = {version = "0.3", features = ["std"]}
uuid = {version = "0.8.2", features = ["v4"]}
